:lipstick: Fix undesired horizontal Scrollable behaviour
Took 7 minutes

--- a/src/BaseLayout/styles/global.css
+++ b/src/BaseLayout/styles/global.css
@@ -11,7 +11,6 @@ body {
     background-color: var(--color-bg);
     color: var(--color);
     height: 100vh;
-    width: 100vw;
 }
 
 html {
